--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,13 @@
 language: node_js
+
+before_install:
+  - rvm install 2.2
+  - rvm use 2.2
+  - gem install hiptest-publisher
+  - hiptest-publisher -c mocha.conf --only=tests --test-run-id=11085
+
+script:
+  - mocha test --reporter mocha-junit-reporter
+
+after_script:
+  - hiptest-publisher -c mocha.conf --push=test-results.xml --test-run-id=11085
