--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "coffee-machine",
   "devDependencies": {
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "mocha-junit-reporter": "^1.9.1"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha"
