--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - hiptest-publisher -c mocha.conf --only=tests --test-run-id=11085
 
 script:
-  - mocha test --reporter mocha-junit-reporter
+  - mocha test --recursive --reporter mocha-junit-reporter
 
 after_script:
   - hiptest-publisher -c mocha.conf --push=test-results.xml --test-run-id=11085
