--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ before_install:
   - rvm install 2.2
   - rvm use 2.2
   - gem install hiptest-publisher
-  - hiptest-publisher -c mocha.conf --only=tests --test-run-id=11085
+  - hiptest-publisher -c mocha.conf --token=$SECRET_TOKEN --only=tests --test-run-id=11085
 
 script:
   - mocha test --recursive --reporter mocha-junit-reporter
 
 after_script:
-  - hiptest-publisher -c mocha.conf --push=test-results.xml --test-run-id=11085
+  - hiptest-publisher -c mocha.conf --token=$SECRET_TOKEN --push=test-results.xml --test-run-id=11085
