--- a/mocha.conf
+++ b/mocha.conf
@@ -1,3 +1,4 @@
+token = 363676140231629051527458903626088501912859244440523876036
 site  = 'https://hiptest.net'
 language = 'javascript'
 framework = 'mocha'
